...
                  RANGE_TABS.find((tab) => tab.value === range)?.label ??
                  'All time'
                }
                onSearch={
                  leaders.length > 0 ? () => setIsSearching(true) : undefined
                }
                title="Leaderboard"
              />
            </View>
            <RangeTabs active={range} onSelect={setRange} />
            {hasLeaders ? (
              <View className="pb-1.5">
                <Podium
...
